# transform

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README  README.md  RELEASE.md  get_started.md  getting_started.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  setup.py
.github/workflows/: ci-test.yml  wheels.yml
api_docs/python/tft/: index.html
api_docs/python/tft-beam/: index.html
api_docs/python/tft-beam-analyzer-cache/: index.html
api_docs/python/tft-beam-experimental/: index.html
api_docs/python/tft-coders/: index.html
api_docs/python/tft-experimental/: index.html
build_tft_beam_docs/: index.html
build_tft_docs/: index.html
common_transformations/: index.html
docs/: _toc.yaml  build_docs.py  build_tft_beam_docs.py  build_tft_docs.py  common_transformations.md  get_started.ipynb  get_started.md  index.md  install.md  tf2_support.md  tft_bestpractices.md
docs/api_docs/python/: _redirects.yaml  _toc.yaml  index.md  tft-beam-analyzer-cache.md  tft-beam-experimental.md  tft-beam.md  tft-coders.md  tft-experimental.md  tft.md  tft_beam.md
docs/api_docs/python/tft/: Analyzer.md  CovarianceCombiner.md  MeanAndVarCombiner.md  NumPyCombiner.md  PCACombiner.md  QuantilesCombiner.md  TFTransformOutput.md  TransformFeaturesLayer.md  WeightedMeanAndVarCombiner.md  apply_analyzer.md  apply_buckets.md  apply_buckets_with_interpolation.md  apply_combiner.md  apply_function.md  apply_function_with_checkpoint.md  apply_pyfunc.md  apply_saved_model.md  apply_vocab.md  apply_vocabulary.md  bag_of_words.md  bucketize.md  bucketize_per_key.md  coders.md  compute_and_apply_vocabulary.md  count_per_key.md  covariance.md  deduplicate_tensor_per_row.md  estimated_probability_density.md  get_analyze_input_columns.md  get_transform_input_columns.md  hash_strings.md  histogram.md  max.md  mean.md  min.md  ngrams.md  pca.md  ptransform_analyzer.md  (+18 more)
docs/tutorials/: README.md  TFT_census_example.ipynb  TFT_simple_example.ipynb
examples/: README.md  census_example.py  census_example_common.py  census_example_test.py  census_example_v2.py  census_example_v2_test.py  dataset_tfxio_example.py  dataset_tfxio_example_test.py  local_model_server.py  mpg_example.py  sentiment.md  sentiment_example.md  sentiment_example.py  sentiment_example_test.py  sentiment_example_v2.py  sentiment_example_v2_test.py  simple_example.py  simple_example_test.py  simple_sequence_example.py  simple_sequence_example_test.py
get_started/: index.html
install/: index.html
search/: search_index.json
tensorflow_transform/: __init__.py  analyzer_cache.py  analyzer_cache_test.py  analyzer_nodes.py  analyzers.py  analyzers_test.py  annotations.proto  annotators.py  annotators_test.py  api.py  attributes_classes.py  base_tftransform_impl_test.py  benchmark_combiners.py  benchmark_impl_helper_test.py  common.py  common_test.py  common_types.py  context.py  gaussianization.py  gaussianization_test.py  graph_context.py  graph_tools.py  graph_tools_test.py  impl_helper.py  impl_helper_test.py  info_theory.py  info_theory_test.py  inspect_preprocessing_fn.py  inspect_preprocessing_fn_test.py  keras_lib.py  mappers.py  mappers_test.py  nodes.py  nodes_test.py  output_wrapper.py  pickle_helper.py  pretrained_models.py  pretrained_models_test.py  py.typed  schema_inference.py  (+8 more)
tensorflow_transform/beam/: __init__.py  analysis_graph_builder.py  analysis_graph_builder_test.py  analyzer_cache.py  analyzer_cache_test.py  analyzer_impls.py  analyzer_impls_test.py  annotators_test.py  beam_nodes.py  bucketize_integration_test.py  bucketize_integration_v2_test.py  cached_impl_test.py  combiner_packing_util.py  combiner_packing_util_test.py  common.py  context.py  context_test.py  deep_copy.py  deep_copy_test.py  impl.py  impl_output_record_batches_test.py  impl_test.py  impl_use_tfxio_test.py  impl_v2_test.py  info_theory.py  info_theory_test.py  shared.py  shared_test.py  test_helpers.py  tft_unit.py  tft_unit_test.py  tukey_hh_params_integration_test.py  tukey_hh_params_integration_v2_test.py  vocabulary_integration_test.py  vocabulary_integration_v2_test.py  vocabulary_tfrecord_gzip_integration_test.py
tensorflow_transform/beam/coders/: csv_coder.py  csv_coder_test.py  example_proto_coder.py  example_proto_coder_test.py
tensorflow_transform/beam/experimental/: __init__.py  analyzer_impls.py
tensorflow_transform/beam/io/: __init__.py  beam_metadata_io.py  transform_fn_io.py  transform_fn_io_test.py
tensorflow_transform/beam/tft_beam_io/: __init__.py  beam_metadata_io.py  beam_metadata_io_test.py  test_metadata.py  transform_fn_io.py  transform_fn_io_test.py
tensorflow_transform/coders/: __init__.py  csv_coder.py  csv_coder_test.py  example_proto_coder.py  example_proto_coder_test.py  example_proto_coder_test_cases.py
tensorflow_transform/experimental/: __init__.py  analyzers.py  annotators.py  mappers.py
tensorflow_transform/py_func/: __init__.py  api.py  pyfunc_helper.py
tensorflow_transform/saved/: __init__.py  constants.py  input_fn_maker.py  input_fn_maker_test.py  legacy_saved_transform_io.py  saved_model_loader.py  saved_model_loader_test.py  saved_transform_io.py  saved_transform_io_test.py  saved_transform_io_v2.py  saved_transform_io_v2_test.py
tensorflow_transform/tf_metadata/: dataset_anomalies.py  dataset_metadata.py  dataset_metadata_test.py  dataset_problem_statements.py  dataset_provenance.py  dataset_schema.py  dataset_schema_test.py  dataset_statistics.py  futures.py  metadata_directory.py  metadata_io.py  metadata_io_test.py  schema_utils.py  schema_utils_legacy.py  schema_utils_test.py  schema_utils_test_cases.py  test_common.py  version_api.py
tensorflow_transform/tf_metadata/v1_json/: schema_io_v1_json.py  schema_io_v1_json_reader.py  schema_io_v1_json_test.py  schema_io_v1_json_writer.py
tensorflow_transform/tf_metadata/vtest/: schema_io_vtest.py
tests/: README.md  conftest.py  test_minimal_setup.py  test_setup_validation.py
tf2_support/: index.html
tft_bestpractices/: index.html
tutorials/: TFT_simple_example.ipynb
(+23 files in other folders)
